@@ -19,7 +19,6 @@ if(!$_REQUEST['search_modfunc'])
 {
 	DrawHeader(ProgramTitle());
 
-	$extra['force_search'] = true;
 	$extra['new'] = true;
 	$extra['action'] .= "&_ROSARIO_PDF=true";
 	Search('student_id',$extra);
